--- a/style.css
+++ b/style.css
@@ -1,5 +1,4 @@
-
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -7,32 +6,36 @@
     text-decoration: none;
 }
 
-.container{
-    width: 1240px;
+.container {
+    width: 76%;
     margin: 0 auto;
-    
+
 }
 
-nav{
+nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
 
-.list{
+.list {
     display: flex;
     gap: 50px;
     align-items: center;
 }
 
-.hero{
+.fa-solid {
+    display: none;
+}
+
+.hero {
     display: flex;
     align-items: center;
     justify-content: space-between;
     margin-top: 100px;
 }
 
-.hero-content{
+.hero-content {
     width: 600px;
     display: flex;
     flex-direction: column;
@@ -40,14 +43,14 @@ nav{
 
 }
 
-.hero-img{
+.hero-img {
     width: 500px;
     height: 300px;
     object-fit: cover;
     border-radius: 8px;
 }
 
-.card-wrapper{
+.card-wrapper {
     margin-top: 100px;
     display: flex;
     justify-content: space-between;
@@ -55,26 +58,124 @@ nav{
     gap: 50px;
 }
 
-.card{
+.card {
     width: 300px;
     height: 450px;
     border-radius: 8px;
     border: 2px solid black;
 }
 
-.card-img{
+.card-img {
     width: 296px;
     height: 200px;
     border-radius: 8px;
     object-fit: cover;
 }
 
-.card>h1,p,button{
+.card>h1,
+p,
+button {
     padding: 10px;
 }
 
-.card>button{
+.card>button {
     margin-left: 10px;
     width: 275px;
     margin-top: 20px;
+}
+
+
+@media only screen and (max-width:1000px) {
+    body {
+        background-color: crimson;
+    }
+
+    .hero {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .hero-img {
+        width: 100%;
+    }
+
+    .hero-content {
+        width: 100%;
+    }
+
+    .card-wrapper {
+        width: 100%;
+        gap: 20px;
+    }
+
+
+    .card {
+        width: 250px;
+        height: 400px;
+    }
+
+    .card-img {
+        width: 246px;
+        height: 180px;
+
+    }
+
+    .card>h1,
+    p,
+    button {
+        padding: 10px;
+    }
+
+    .card>button {
+        margin-left: 10px;
+        width: 225px;
+        margin-top: 20px;
+    }
+
+
+}
+
+
+@media only screen and (max-width:650px) {
+
+    .container {
+        width: 97%;
+    }
+
+    .list {
+        display: none;
+    }
+
+    .fa-solid {
+        display: inline-block;
+    }
+
+
+    .card-wrapper {
+        justify-content: center;
+    }
+
+    .card {
+        width: 350px;
+        height: 450px;
+    }
+
+    .card-img {
+        width: 346px;
+        height: 180px;
+
+    }
+
+    .card>h1,
+    p,
+    button {
+        padding: 10px;
+    }
+
+    .card>button {
+        margin-left: 10px;
+        width: 325px;
+        margin-top: 20px;
+    }
+
 }
